css/gradient-editor.css
.gradient-type-selector {
	display: flex;
	justify-content: start;
	margin-bottom: 10px;
}

.gradient-type-button {
	padding: 5px 12px;
	cursor: pointer;
	transition: background-color 0.3s;
}

.gradient-type-button:first-child {
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
	border: 1px solid #b9b9b9;
}

.gradient-type-button:nth-child(2) {
	border-top-right-radius: 10px;
	border-bottom-right-radius: 10px;
	border-top: 1px solid #b9b9b9;
	border-right: 1px solid #b9b9b9;
	border-bottom: 1px solid #b9b9b9;
}

.gradient-type-button-checked {
	background-color: #CFD5DD;
}

.gradient-type-button input {
	display: none;
}

.gradient-type-button label {
	cursor: pointer;
	color: #959595;
}

.gradient-type-button-checked label {
	color: #333;
}

.gradient-type-select-degrees {
	margin-left: 15px;
	position: relative;
}

.gradient-type-select-degrees:before {
	content: '°';
	position: absolute;
	right: -10px;
	top: 0;
	font-size: 20px;
}

.gradient-type-select-degrees.hide {
	display: none;
}

.gradient-type-select-degrees input {
	width: 25px;
}

#gradient-container {
	display: flex;
	flex-direction: column;
	align-items: center;
	border-radius: 10px;
}

#gradient-preview {
	margin-bottom: 10px;
	width: 100%;
	height: 200px;
	border: 10px solid #e7eaf1;
	border-radius: 10px;
	box-sizing: border-box;
}

.tutorial-container {
	padding-left: 20px;
	padding-right: 20px;
	position: relative;
	width: 100%;
	opacity: 0;
	z-index: 1;
	animation: tutorial-fade-in 1s 3s forwards;
}

/* fade in tutorial after 3 seconds */
@keyframes tutorial-fade-in {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}

}

.tutorial {
	position: absolute;
	top: -75px;
	left: 0;
	box-sizing: border-box;
	padding: 15px 42px 10px 15px;
	width: 70%;
	z-index: 1;
	background-color: #ffc848;
	border-radius: 10px;
	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
	margin-left: 15%;
	font-size: 15px
}

@media (min-width: 600px) {
	.tutorial {
		top: -55px;
		padding-right: 15px;
	}
}

.tutorial .close-x {
	position: absolute;
	top: 9px;
	right: 7px;
	cursor: pointer;
	fill: transparent;
}

.tutorial .close-x {
	background: transparent;
	padding: 5px 5px 0 5px;
	box-shadow: none;
}

.tutorial .close-x svg {
	width: 20px;
	height: 20px;
	fill: #666;
}

.tutorial p {
	margin: 0;
	text-align: left;
	/* max-width: 164px; */
}

@media (min-width: 600px) {
	.tutorial p {
		text-align: center;
		min-width: 100%;
	}

}

.tutorial svg.arrow {
	margin-left: -25px;
	position: absolute;
	bottom: -40px;
	left: 50%;
	transform: translateX(-50%);
	width: 50px;
	height: 50px;
	fill: #25ae85;
	animation: arrow-bounce 2s infinite;
}

@keyframes arrow-bounce {

	0%,
	20%,
	50%,
	80%,
	100% {
		transform: translateY(0);
	}

	40% {
		transform: translateY(-15px);
	}

	60% {
		transform: translateY(-7px);
	}
}

#gradient-rectangle {
	margin-bottom: 146px;
	position: relative;
	border-radius: 10px;
	border: 10px solid #e7eaf1;
	width: 100%;
	height: 60px;
	cursor: cell;
	box-sizing: border-box;
}

@media (min-width: 768px) {
	#gradient-rectangle {
		width: 600px
	}
}

.marker {
	position: absolute;
	top: 115%;
	transform: translateX(-50%);
	border-left: 2px solid #ddd;
	border-right: 2px solid #ddd;
	width: 16px;
	height: 120px;
	display: flex;
	align-items: center;
	cursor: move;
	background-color: #eff3f6;
	transition: opacity 0.4s, box-shadow 0.4s, border 0.4s;
}

.marker.selected {
	opacity: 1;
	background-color: #fff;
}

.marker:hover .trash,
.marker.selected .trash,
.marker:hover .pencil svg:nth-child(2),
.marker.selected .pencil svg:nth-child(2),
.marker:hover .percent-input,
.marker.selected .percent-input {
	opacity: 1;
}

.marker:hover .pencil svg:nth-child(1) {
	opacity: 0.6;
}

.marker-triangle {
	width: 0;
	height: 0;
	border-left: 10px solid transparent;
	border-right: 10px solid transparent;
	border-bottom: 18px solid #7a8caa;
	border-radius: 50px 0 0 0;
	display: block;
	position: absolute;
	left: -2px;
	top: -18px;
	transition: border-bottom 0.3s;
}

.marker-triangle:before {
	content: '';
	width: 0;
	height: 0;
	border-left: 6px solid transparent;
	border-right: 6px solid transparent;
	border-bottom: 12px solid #96a7c4;
	border-radius: 50px 0 0 0;
	display: block;
	position: absolute;
	left: -6px;
	top: 4px;
}

.marker.selected .marker-triangle {
	border-bottom: 18px solid #b6c0d4;
}

.pencil svg {
	position: absolute;
	top: 3px;
	left: 3px;
	width: 18px;
	height: 18px;
	opacity: 0;
	transition: opacity 0.4s;
}

.pencil svg:nth-child(1) {
	stroke: #fff;
	stroke-width: 4;
	opacity: 0;
}

.pencil:hover svg {
	opacity: 1;
}

.color-swatch {
	position: absolute;
	top: 10px;
	left: -4px;
	width: 24px;
	height: 24px;
	box-shadow: 0 0 0 2px #cecfd2 inset;
	border-radius: 1px;
	cursor: pointer;
}

.coloris-picker {
	width: 1px;
	position: absolute;
	opacity: 0;
}

/* grab handle */
.marker:after {
	content: '';
	position: absolute;
	left: -5px;
	top: 43px;
	border-top: 2px solid #aac3e9;
	border-left: 2px solid #aac3e9;
	border-right: 2px solid #aac3e9;
	border-bottom: 2px solid #aac3e9;
	border-radius: 3px;
	width: 22px;
	height: 38px;
	background: radial-gradient(circle, #68a4ff 30%, #bbd6ff 20%);
	background-size: 6px 6px;
	background-position: top center;
	filter: saturate(0.2);
}

.marker.selected:after {
	filter: saturate(1);
}

.percent-input-container {
	border-radius: 5px;
	width: 40px;
	height: 32px;
	background-color: #fff;
	position: absolute;
	left: -12px;
	top: 95px;
}

.percent-input {
	opacity: 0.3;
	transition: opacity 0.3s;
	padding: 7px 5px;
	width: 18px;
	width: 24px;
	font-size: 14px;
	text-align: center;
	margin-top: -1px;
	margin-left: -1px;
}

.trash {
	border-radius: 100%;
	position: absolute;
	top: 135px;
	left: -2px;
	width: 20px;
	height: 20px;
	cursor: pointer;
	transition: opacity 0.3s;
	opacity: 0.3;
}

.trash svg {
	border-radius: 10px;
	transition: fill 0.3s;
	fill: rgb(255, 0, 0);
	position: absolute;
	top: -3px;
	left: -3px;
	width: 26px;
	height: 26px;
}

.trash svg:hover {
	fill: rgb(255, 136, 136);
}

